--- a/src/main/resources/static/css/menu.css
+++ b/src/main/resources/static/css/menu.css
@@ -31,7 +31,54 @@ body {
     line-height: 80px;
 }
 
+.nav-menu {
+    display: flex;
+    margin-right: 40px;
+    list-style: none;
+}
+
+ 
+
+.nav-menu-item {
+    font-size: 18px;
+    margin: 0 10px;
+    line-height: 80px; 
+    width: max-content;
+}
+
+
+.nav-menu-link {
+    padding: 8px 12px;
+    border-radius: 8px;
+}
+
+
 .nav-link {
     color: white;
     text-decoration: none;
+}
+
+.nav-menu-link:hover {
+    font-size: 22px;
+     background-color: #024070;
+    transition: 1s;
+}
+
+.footer {
+    background-color: black;
+    text-align: center;
+    height: 20px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+
+.contenido {
+    background-color: wheat;
+    position: fixed;
+    top: 80px;
+    left: 0;
+    width: 100%;
+    overflow: auto;
 }
