--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -6,8 +6,21 @@
         <meta charset="UTF-8"/>
     </head>
     <body>
-        <header th:fragment="header">
-            <h1>TeachShop</h1>
+        <header th:fragment="header" class="header">
+           <nav class="nav">
+               <a th:href="@{/}" class="logo -link">TechShop</h1>  
+               <ul class="nav-menu">
+                   <li class="nav-menu-item">
+                       <a th:href="@{/cliente/listado}" class="nav-menu-link">Clientes</a>
+                   </li>
+                   <li class="nav-menu-item">
+                       <a th:href="@{/categoria/listado}" class="nav-menu-link">Categoria</a>
+                   </li>
+                   <li class="nav-menu-item">
+                       <a th:href="@{/articulo/listado}" class="nav-menu-link">Articulo</a>
+                   </li>
+               </ul>
+           </nav>
         </header>
         <footer th:fragment="footer".>
             <p>$COPY Derechos Reservados 2022</p>
