--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -3,42 +3,40 @@
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8">
+        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
     <header th:replace="layout/plantilla :: header"/>
-    
-        <h2>Nuestros Clientes</h2>
-        <a th:href="@{/cliente/nuevo}">Nuevo Cliente</a>
-       <div th:if="${clientes != null and !clientes.empty}">
+    <div class="contenido">
+        <h2>Nuestros Categorias</h2>
+        <a th:href="@{/categoria/nuevo}">Nuevo Categoria</a>
+       <div th:if="${categorias != null and !categorias.empty}">
             <table border="1">
                 <thead>
                     <tr>
-                        <th>Nombre</th>
-                        <th>Apellidos</th>
-                        <th>Correo</th>
-                        <th>Teléfono</th>
-                        <th>Limite</th>
+                        <th>descripcion</th>
+                        <th>activo</th>
                         <th>Eliminar</th>
                         <th>Modificar</th>
-
                     </tr>
                 </thead>
                 <tbody>
-                    <tr th:each="cliente : ${clientes}">
-                        <td th:text="${cliente.nombre}"></td>
-                        <td th:text="${cliente.apellidos}"></td>
-                        <td th:text="${cliente.correo}"></td>
-                        <td th:text="${cliente.telefono}"></td>
-                        <td th:text="${#numbers.formatDecimal(cliente.credito.limite,3,2)}"style="text-align: right"></td>
-                        <td><a th:href="@{/cliente/eliminar}+${cliente.idCliente}">Eliminar</a></td>
-                        <td><a th:href="@{/cliente/modificar}+${cliente.idCliente}">Modificar</a></td>
+                    <tr th:each="categoria : ${categorias}">
+                        <td th:text="${categoria.descripcion}"></td>
+                        <td th:text="${categoria.activo}"></td>
+                        <td><a th:href="@{/categoria/eliminar}+${categoria.idCategoria}">Eliminar</a></td>
+                        <td><a th:href="@{/categoria/modificar}+${categoria.idCategoria}">Modificar</a></td>
                     </tr>
                 </tbody>
             </table>
         </div>
-        <div th:if="${clientes == null or clientes.empty}">
-            No tenemos lista de clientes que mostrar...
+                  
+
+        <div th:if="${categorias == null or categorias.empty}">
+            No tenemos lista de categorias que mostrar...
         </div>
+                          </div>
+
           <footer th:replace="layout/plantilla :: footer"/>   
     </body>
 </html>
