--- a/src/main/resources/templates/Articulo/listado.html
+++ b/src/main/resources/templates/Articulo/listado.html
@@ -1,35 +1,35 @@
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
+      <head th:replace="layout/plantilla::head">
         <title>TechShop</title>
-        <meta charset="UTF-8">
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
+       
     </head>
     <body>
     <header th:replace="layout/plantilla :: header"/>
     <div class="contenido">
-        <h2>Nuestros Articulos</h2>
-        <a th:href="@{/articulo/nuevo}">Nuevo Articulo</a>
+        <h2>[[#{index.titulo}]]</h2>
+        <a th:href="@{/articulo/nuevo}">[[#{articulo.nuevo}]]</a>
        <div th:if="${articulos != null and !articulos.empty}">
             <table border="1">
                 <thead>
                     <tr>
-                        <th>descripcion</th>
-                        <th>precio</th>
-                        <th>existencias</th>
-                        <th>activo</th>
-                        <th>Eliminar</th>
-                        <th>Modificar</th>
+                        <th>[[#{articulo.descripcion}]]</th>
+                        <th>[[#{articulo.precio}]]</th>
+                        <th>[[#{articulo.existencias}]]</th>
+                        <th>[[#{articulo.activo}]]</th>
+                        <th>[[#{accion.eliminar}]]</th>
+                        <th>[[#{accion.modificar}]]</th>
 
                     </tr>
                 </thead>
                 <tbody>
                     <tr th:each="articulo : ${articulos}">
                         <td th:text="${articulo.descripcion}"></td>
-                        <td th:text="${articulo.precio}"></td>
-                        <td th:text="${articulo.existencias}"></td>
-                        <td th:text="${articulo.activo}"></td>
-                        <td><a th:href="@{/articulo/eliminar}+${articulo.idArticulo}">Eliminar</a></td>
-                        <td><a th:href="@{/articulo/modificar}+${articulo.idArticulo}">Modificar</a></td>
+                          <td th:text="${#numbers.formatDecimal(articulo.precio,3,2)}"style="text-align: right"></td>
+                        <td th:text="${articulo.existencias}" style="text-align: center"></td>
+                        <td style="text-align: center"><input type="checkbox" name="activo"
+                                                              th:checked="${articulo.activo}" disabled="true"></td>
+                        <td><a th:href="@{/articulo/eliminar/}+${articulo.idArticulo}">[[#{accion.eliminar}]]</a></td>
+                        <td><a th:href="@{/articulo/modificar/}+${articulo.idArticulo}">[[#{accion.actualizar}]]</a></td>
                     </tr>
                 </tbody>
             </table>
@@ -37,7 +37,7 @@
                   
 
         <div th:if="${articulos == null or articulos.empty}">
-            No tenemos lista de articulos que mostrar...
+           [[#{articulo.no_mostrar}]]
         </div>
                           </div>
 
