--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -1,15 +1,15 @@
  <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
+        <head th:replace="layout/plantilla::head">
         <title>TechShop</title>
-        <meta charset="UTF-8">
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
     <header th:replace="layout/plantilla :: header"/>
     <div class="contenido">
         <h2>Nuestros Clientes</h2>
         <a th:href="@{/cliente/nuevo}">Nuevo Cliente</a>
+        <br>
+          <a th:href="@{/cliente/busqueda}">Buscar por Apellidos</a>
        <div th:if="${clientes != null and !clientes.empty}">
             <table border="1">
                 <thead>
@@ -31,8 +31,8 @@
                         <td th:text="${cliente.correo}"></td>
                         <td th:text="${cliente.telefono}"></td>
                         <td th:text="${#numbers.formatDecimal(cliente.credito.limite,3,2)}"style="text-align: right"></td>
-                        <td><a th:href="@{/cliente/eliminar}+${cliente.idCliente}">Eliminar</a></td>
-                        <td><a th:href="@{/cliente/modificar}+${cliente.idCliente}">Modificar</a></td>
+                        <td><a th:href="@{/cliente/eliminar/}+${cliente.idCliente}">Eliminar</a></td>
+                        <td><a th:href="@{/cliente/modificar/}+${cliente.idCliente}">Modificar</a></td>
                     </tr>
                 </tbody>
             </table>
