--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
-    <head>
+    xmlns:sec="http://thymeleaf.org/extras/spring-security">
+    
+    <head th:fragment="head">
         <title>TechShop</title>
         <meta charset="UTF-8"/>
+        <link rel="stylesheet" 
+              th:href="@{/webjars/bootstrap/css/boostrap.min.css}"/>
+        <link rel="stylesheet" 
+              th:href="@{/webjars/font-awesome/css/all.css}"/>
+        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     </head>
     <body>
         <header th:fragment="header" class="header">
@@ -11,19 +20,22 @@
                <a th:href="@{/}" class="logo -link">TechShop</h1>  
                <ul class="nav-menu">
                    <li class="nav-menu-item">
-                       <a th:href="@{/cliente/listado}" class="nav-menu-link">Clientes</a>
+                       <a th:href="@{/cliente/listado}" class="nav-menu-link">[[#{plantilla.clientes}]]</a>
                    </li>
                    <li class="nav-menu-item">
-                       <a th:href="@{/categoria/listado}" class="nav-menu-link">Categoria</a>
+                       <a th:href="@{/categoria/listado}" class="nav-menu-link">[[#{plantilla.categorias}]]</a>
                    </li>
                    <li class="nav-menu-item">
-                       <a th:href="@{/articulo/listado}" class="nav-menu-link">Articulo</a>
+                       <a th:href="@{/articulo/listado}" class="nav-menu-link">[[#{plantilla.articulos}]]</a>
                    </li>
                </ul>
            </nav>
         </header>
-        <footer th:fragment="footer".>
-            <p>$COPY Derechos Reservados 2022</p>
+        <footer th:fragment="footer" class="footer">
+            <p>&COPY [[#{plantilla.derechos}]] | 
+                <a th:href="@{/(lang=es)}">ES</a> | 
+                <a th:href="@{/(lang=en)}">EN</a>
+            </p>
         </footer>
     </body>
 </html>
