--- a/src/main/resources/templates/cliente/fragmentosCliente.html
+++ b/src/main/resources/templates/cliente/fragmentosCliente.html
@@ -6,58 +6,155 @@
         <title>TechShop</title>
     </head>
     <body>
-     <section th:fragment="botonesAgregar" class="py-4 mb-4 bg-light">  
-         <div class="container">
-             <div class="row">
-                 <div class="col-md-3" sec:authorize="hasRole('ROLE_ADMIN')">
-                     <botton type="button"
-                             class="btn btn-primary btn-block"
-                             data-bs-tagle="modal"
-                             data-bs-target="#agregarCliente">
-                         <i class="fas fa-plus"></i> [[#{accion.agregar}]]
-                     </botton> 
-                 </div>            
-             </div>
-         </div>
-     </section>
-        
-        <div class="contenido">
-            <h2>Nuestros Clientes</h2>
-            <a th:href="@{/cliente/nuevo}" sec:authorize="hasRole('ROLE_ADMIN')">Nuevo Cliente</a>
-            <br/>
-            <a th:href="@{/cliente/busqueda}">Buscar por apellidos</a>
-            <div th:if="${clientes != null and !clientes.empty}">
-                <table border="1">
-                    <thead>
-                        <tr>
-                            <th>Nombre</th>
-                            <th>Apellidos</th>
-                            <th>Correo</th>
-                            <th>Teléfono</th>
-                            <th>Límite</th>
-                            <th sec:authorize="hasRole('ROLE_ADMIN')">Eliminar</th>
-                            <th sec:authorize="hasRole('ROLE_ADMIN')">Modificar</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr th:each="cliente : ${clientes}">
-                            <td th:text="${cliente.nombre}"></td>
-                            <td th:text="${cliente.apellidos}"></td>
-                            <td th:text="${cliente.correo}"></td>
-                            <td th:text="${cliente.telefono}"></td>
-                            <td th:text="${#numbers.formatDecimal(cliente.credito.limite,3,2)}" 
-                                style="text-align: right"></td>
-                            <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{/cliente/eliminar/}+${cliente.idCliente}">Eliminar</a></td>
-                            <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{/cliente/modificar/}+${cliente.idCliente}">Modificar</a></td>
-                        </tr>
-                    </tbody>
-                </table>
+        <section th:fragment="botonesAgregar" class="py-4 mb-4 bg-light">  
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3" sec:authorize="hasRole('ROLE_ADMIN')">
+                        <botton type="button"
+                                class="btn btn-primary btn-block"
+                                data-bs-tagle="modal"
+                                data-bs-target="#agregarCliente">
+                            <i class="fas fa-plus"></i> [[#{accion.agregar}]]
+                        </botton> 
+                    </div>            
+                </div>
             </div>
-            <div th:if="${clientes == null or clientes.empty}">
-                No tenemos lista de clientes que mostrar...
-            </div>
-        </div>
-       
+        </section>
+        <section th:fragment="listadoClientes" id="clientes">  
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-9">
+                        <div class="card">
+                            <div class="card-header">
+                                <h4>[[#{cliente.titulo}]]</h4>
+                            </div>
+                            <div class="card-body">
+                            <div th:if="${clientes != null and !clientes.empty}">
+                                <table class="table table-striped ">
+                                    <thead class="thead-dark">
+                                        <tr>
+                                            <th>#</th>
+                                            <th>[[{#cliente.nombre}]]</th>
+                                            <th>[[{#cliente.limite}]]</th>
+                                            <th></th>
+                                            <th></th>                                          
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                         <tr th:each="cliente,contador : ${clientes}">
+                                        <td>[[${contador.count}]]</td>
+                                        <td> [[${cliente.nombre}+' '+${cliente.apellidos}]]</td>
+                                        <td class='text-end'> [[${new java.text.DecimalFormat('¢#,##0.00').format(cliente.credito.limite)}]]</td>
 
+                                        <td sec:authorize="hasRole('ROLE_ADMIN')">
+                                            <a th:href="@{/cliente/eliminar/}+${cliente.idCliente}" class='btn btn-danger'> 
+                                                <i class='fas fa-trash'></i> [[#{accion.eliminar}]]                                           
+                                            </a>
+                                        </td>
+                                        <td sec:authorize="hasRole('ROLE_ADMIN')">
+                                            <a th:href="@{/cliente/modificar/}+${cliente.idCliente}" class='btn btn-success'>
+                                                <i class='fas fa-pencil'></i> [[#{accion.actualizar}]]
+                                            </a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div th:if="${clientes == null or clientes.empty}">
+                            [[#{cliente.no_mostrar}]]
+                        </div>
+                        </div>
+                        </div>
+                    </div>
+                     <div class="col-md-3">
+                         <div class='card bg-danger text-white text-center mb-3'>
+                             <div class='card-body'>
+                                 <h3>[[#{cliente.limiteTotal}]]</h3>
+                                 
+                                 <h4>[[${new java.text.DecimalFormat('¢#,##0.00').format(limiteTotal)}]]</h4>
+                                 
+                                 
+                             </div>
+                         </div>
+                         
+                          <div class='card bg-success text-white text-center mb-3'>
+                             <div class='card-body'>
+                                 <h3>[[#{cliente.totalClientes}]]</h3>
+                                 
+                                 <h4>
+                                     <i class='fas fa-users'></i>[[${totalClientes}]]
+                                 </h4>
+                                 
+                                 
+                             </div>
+                         </div>
+                         
+                         
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        
+       <section th:fragment="agregarCliente">
+           <div id="agregarCliente" class="modal fade" tabindex="-1">
+               <div class="modal-dialog modal-lg">
+                   <div class="modal-content">
+                       <div class="modal-header bg-info text-white">
+                           <h5 class="modal-title">[[#{accion.agregar}]]</h5>
+                           <button type="button" class="btn-close"data-bs-dismiss="modal"></button>
+                       </div>   
+
+
+                       
+
+                           <form th:action="@{/cliente/guardar}"
+                                 method="post"    
+                                 
+                                 class="was-validated">
+                                 
+                             <div class="modal-body">  
+
+
+
+
+                               <div class="form-group">
+                                   <label for="nombre">[[#{cliente.nombre}]]:</label>
+                                   <input type="text"  name="nombre" class="form-control" required="true"/>
+                               </div>
+
+                               <div class="form-group">
+                                   <label for="apellidos">[[#{cliente.apellidos}]]:</label>
+                                   <input type="text"name="apellidos" class="form-control" required="true"/>
+                               </div>
+
+
+                               <div class="form-group">
+                                   <label for="correo">[[#{cliente.correo}]]:</label>
+                                   <input type="email" name="correo" class="form-control" required="true"/>
+                               </div>
+
+                               <div class="form-group">
+                                   <label for="telefono">[[#{cliente.telefono}]]:</label>
+                                   <input type="tel"name="telefono" class="form-control" required="true"/>
+                               </div>
+
+
+                               <div class="form-group">
+                                   <label for="limite">[[#{cliente.limite}]]:</label>
+                                   <input type="number"name="limite" class="form-control" required="true"/>
+                               </div>
+
+                                 <div class="modal-footer">
+                                    <button class="btn btn-primary" type="submit" name="guardar" value="Guardar">
+                                        <i class="fas fa-save"></i> [[#{accion.guardar}]]
+                                 </button>
+                                 </div>
+                             </div>
+                           </form>  
+                   </div>
+               </div>
+           </div>
+       </section>
     </body>
 </html>
